packages/wasm/ballerina-lang-go/parser/testdata/tokens/record/negative/duplicate-field-negative.token
(type 4 0x00 ())
(ident, "RecordWithErrorField" 20 0x00 ())
(record 6 0x00 ())
({| 2 0x00 ())
(error 5 0x00 ())
(ident, "'error" 6 0x00 ())
(; 1 0x00 ())
(error 5 0x00 ())
(ident, "'error" 6 0x00 ())
(; 1 0x00 ())
(|} 2 0x00 ())
(; 1 0x00 ())
(type 4 0x00 ())
(ident, "Song" 4 0x00 ())
(record 6 0x00 ())
({| 2 0x00 ())
(string 6 0x00 ())
(ident, "name" 4 0x00 ())
(; 1 0x00 ())
(string 6 0x00 ())
(ident, "name" 4 0x00 ())
(; 1 0x00 ())
(|} 2 0x00 ())
(; 1 0x00 ())
(2 0 0x00 ())
